added edit UI for contacts
