# mock/swagger.yml
@@ -114,6 +114,58 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         404:
           $ref: '#/components/responses/NotFound'
+  /companies:
+    get:
+      tags:
+        - companies
+      summary: Get Company List
+      description: Return a list of companies.
+      operationId: getCompanies
+      parameters:
+        - name: page
+          in: query
+          description: The wanted page number (one page).
+          schema:
+            type: integer
+            format: int32
+            minimum: 1
+        - name: limit
+          in: query
+          description: The maximum number of companies returned for one page.
+          schema:
+            type: integer
+            format: int32
+            minimum: 0
+            maximum: 50
+        - name: sort
+          in: query
+          description: Optional sorting order for companies.
+          schema:
+            type: string
+            enum:
+              - +id
+              - -id
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: integer
+                    format: int32
+                  data:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        format: int32
+                      items:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/Company'
   /workflows:
     get:
       tags:
@@ -1134,6 +1186,30 @@ components:
        - title
        - company
        - date
+    Company:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        status:
+          type: string
+          enum:
+            - active
+            - inactive
+        name:
+          type: string
+          example: IG Won World Championship
+        phone:
+          type: string
+          example: Company phone
+        email:
+          type: string
+          example: Company email
+      required:
+       - id
+       - status
+       - name
     Pageviews:
       type: object
       properties:
